# zetareticula-ts

./: package-lock.json  package.json  tsconfig.json
kubernetes/: deployment.yaml  hpa.yaml
moe-inference-system/: .dockerignore  .gitignore  Dockerfile  README.md  com.moe.autodeploy.plist  deploy-pm2.sh  docker-compose.yml  ecosystem.config.js  jest.config.js  package.json  run-latest.sh  server.js  tsconfig.json  tsconfig.prod.json  tsconfig.tsbuildinfo
moe-inference-system/.github/workflows/: ci-cd.yml  deploy.yml  scheduled-ci.yml
moe-inference-system/docs/: ARCHITECTURE.md
moe-inference-system/kubernetes/production/: configmap.yaml  deployment.yaml  secret.yaml.template  service.yaml
moe-inference-system/playbooks/: build.yml
moe-inference-system/pytorch/: __init__.py  setup.py  zetareticula_ext.cpp
moe-inference-system/scripts/: deploy-production.sh  deploy.sh  gw_distance.py  run-local.sh
moe-inference-system/src/: index.ts
moe-inference-system/src/__tests__/: expert.test.ts
moe-inference-system/src/core/: logger.ts
moe-inference-system/src/evaluation/: gromov_wasserstein.ts  info_nce.ts  test_utils.ts
moe-inference-system/src/integration/: api.ts  diffusion_transformer.ts  zeta_vault.ts
moe-inference-system/src/rust/src/: Cargo.toml  compression.rs  lib.rs  petri.rs  policy_engine.rs  quantization.rs  rl_optimize_bit_depth.rs  tests.rs  trace_buffer.rs
moe-inference-system/src/rust/src/compression/: persistent_homology.rs
moe-inference-system/src/tests/: quantization.tests.ts
moe-inference-system/src/types/: express.d.ts  rust.d.ts  (+1 more)
(+14 files in other folders)
